# wow_vanilla_server

./: Cargo.toml
src/: auth.rs  main.rs
src/world/: char_create.rs  character.rs  character_screen_handler.rs  chat.rs  client.rs  creature.rs  database.rs  inventory.rs  item.rs  mod.rs  world_handler.rs
src/world/character_screen_handler/: char_create.rs  mod.rs
src/world/database/: mod.rs
src/world/world/: client.rs  mod.rs  pathfinding_maps.rs
src/world/world/client/: character_screen_client.rs  mod.rs
src/world/world_handler/: gm_command.rs  mod.rs
src/world/world_handler/gm_command/: mod.rs  parser.rs
src/world/world_opcode_handler/: character.rs  chat.rs  creature.rs  entities.rs  inventory.rs  item.rs  item_query.rs  mod.rs  opcode_handler.rs
src/world/world_opcode_handler/gm_command/: mod.rs  parser.rs
wow_server/: Cargo.toml
wow_server/src/: auth.rs  file_utils.rs
wow_server/src/world/: char_create.rs  character.rs  character_screen_handler.rs  chat.rs  client.rs  creature.rs  database.rs  mod.rs  world_handler.rs  world_opcode_handler.rs
wow_server/src/world/world_opcode_handler/: item_query.rs  mod.rs
wow_vanilla_common/: Cargo.toml  locations.txt
wow_vanilla_common/src/: base_stats.rs  class.rs  exp.rs  factions.rs  lib.rs  race.rs  range.rs
wow_vanilla_common/src/position/: generator.rs  mod.rs  positions.rs
