[package]
name = "wow_vanilla_server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.38.2", features = ["full"]}
wow_login_messages = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["tokio"] }
wow_world_messages = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["tokio", "vanilla", "print-testcase"] }
wow_world_base = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["extended", "vanilla"] }
wow_items = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["vanilla"] }

#wow_login_messages = { path = "../wow_messages/wow_login_messages", features = ["tokio"] }
#wow_world_messages = { path = "../wow_messages/wow_world_messages", features = ["tokio", "vanilla", "print-testcase"] }
#wow_world_base = { path = "../wow_messages/wow_world_base", features = ["extended", "vanilla"] }
#wow_items = { path = "../wow_messages/wow_items", features = ["vanilla"] }

wow_srp = { git="https://github.com/gtker/wow_srp.git", rev = "9c5382a2915850efc69f05d7985ab06b3ec13163" }
walkdir = "2.3.3"

namigator = { git="https://github.com/gtker/namigator-rs.git", rev = "bf9d8d2c36b94011780b4bd3c2fa1896e70ffdb5", features = ["vanilla"] }
