[package]
name = "wow_vanilla_server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.18.2", features = ["full"]}
wow_login_messages = { git="https://github.com/gtker/wow_messages.git", rev = "52e8c7489a4cf38c24503060f1c50835753c60d5", features = ["tokio"] }
wow_world_messages = { git="https://github.com/gtker/wow_messages.git", rev = "52e8c7489a4cf38c24503060f1c50835753c60d5", features = ["tokio", "wrath"] }
wow_world_base = { git="https://github.com/gtker/wow_messages.git", rev = "52e8c7489a4cf38c24503060f1c50835753c60d5", features = ["extended"] }
#wow_login_messages = { path = "../../wow_messages/wow_login_messages", features = ["tokio"] }
#wow_world_messages = { path = "../../wow_messages/wow_world_messages", features = ["tokio", "wrath"] }
#wow_world_base = { path = "../../wow_messages/wow_world_base", features = ["extended"] }
wow_srp = "0.5.3"
